RESOLVED FIXED78146
[Qt][DRT] DumpRenderTreeQt should support --no-timeout and --timeout options
https://bugs.webkit.org/show_bug.cgi?id=78146
Summary [Qt][DRT] DumpRenderTreeQt should support --no-timeout and --timeout options
Jesus Sanchez-Palencia
Reported 2012-02-08 13:09:03 PST
Qt's DumpRenderTree should support --no-timeout and --timeout options in order to be able to use run-perf-tests and have a Performance Bot.
Attachments
Patch (6.54 KB, patch)
2012-02-08 13:15 PST, Jesus Sanchez-Palencia
no flags
Jesus Sanchez-Palencia
Comment 1 2012-02-08 13:15:36 PST
Ryosuke Niwa
Comment 2 2012-02-08 13:37:42 PST
Comment on attachment 126140 [details] Patch Excellent!
WebKit Review Bot
Comment 3 2012-02-08 20:05:09 PST
Comment on attachment 126140 [details] Patch Clearing flags on attachment: 126140 Committed r107171: <http://trac.webkit.org/changeset/107171>
WebKit Review Bot
Comment 4 2012-02-08 20:05:13 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.