[Qt][DRT] DumpRenderTreeQt should support --no-timeout and --timeout options https://bugs.webkit.org/show_bug.cgi?id=78146

Patch by Jesus Sanchez-Palencia <jesus.palencia@openbossa.org> on 2012-02-08
Reviewed by Ryosuke Niwa.

Our DumpRenderTree should support --no-timeout and --timeout options in order
to be able to use run-perf-tests and have a Performance Bot.
This patch adds setTimeout and setShouldTimeout functions to our LayoutTestController
and the necessary code to handle such command line arguments to our DumpRenderTree.

* DumpRenderTree/qt/DumpRenderTreeQt.cpp:
(WebCore::DumpRenderTree::setTimeout):
(WebCore):
(WebCore::DumpRenderTree::setShouldTimeout):
* DumpRenderTree/qt/DumpRenderTreeQt.h:
(DumpRenderTree):
* DumpRenderTree/qt/LayoutTestControllerQt.cpp:
(LayoutTestController::LayoutTestController):
(LayoutTestController::waitUntilDone):
(LayoutTestController::notifyDone):
* DumpRenderTree/qt/LayoutTestControllerQt.h:
(LayoutTestController::setTimeout):
(LayoutTestController::setShouldTimeout):
(LayoutTestController):
* DumpRenderTree/qt/main.cpp:
(isOption):
(printUsage):
(main):

Canonical link: https://commits.webkit.org/95078@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107171 268f45cc-cd09-0410-ab3c-d52691b4dbfc